# DiagnosticDomin

./: makefile
back-end/: pyproject.toml
back-end/dominBackEnd/: db.sqlite3  manage.py
back-end/dominBackEnd/dominBackEnd/: asgi.py  settings.py  urls.py  wsgi.py
back-end/dominBackEnd/sensorData/: data_scripts.py  models.py  urls.py  views.py
back-end/dominBackEnd/sensorData/migrations/: 0001_initial.py  0002_alter_sensordata_events.py
domin-front-end/: app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
domin-front-end/components/: dateSelecter.vue
domin-front-end/plugins/: chartJs.ts  vue-chart.js
